--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -15,3 +15,7 @@ jobs:
           body: |
             >pong ${{ github.event.client_payload.slash_command.args.all }}
           reaction-type: hooray
+      - name: Dump the client payload context
+        env:
+          PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload) }}
+        run: echo "$PAYLOAD_CONTEXT"
