--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           cat README.md
           printenv
-          echo ${{GITHUB_SHA::8}}
+          echo ${GITHUB_SHA::8}
         env:
           MARKET_CODES: nl*-cte
           SHORT_SHA: ${GITHUB_SHA::8}
