--- a/.github/workflows/respitory-dispatch-pr.yml
+++ b/.github/workflows/respitory-dispatch-pr.yml
@@ -8,4 +8,4 @@ jobs:
         uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.PAT }}
-          event-type: deploy
+          event-type: deploy-command
