--- a/.github/workflows/respitory-dispatch-pr.yml
+++ b/.github/workflows/respitory-dispatch-pr.yml
@@ -9,3 +9,4 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           event-type: deploy-command
+          client-payload: '{"github": ${{ toJson(github) }}}'
