--- a/.github/workflows/deploy-command.yml
+++ b/.github/workflows/deploy-command.yml
@@ -5,10 +5,11 @@ on:
   issue_comment:
     types: [created]
 jobs:
-  deploy:
+  command:
     runs-on: ubuntu-latest
+    outputs:
+      status: ${{ steps.command.outputs.arguments }}
     steps:
-      - uses: actions/checkout@v2
       - name: Check for /deploy command
         id: command
         uses: xt0rted/slash-command-action@v1
@@ -19,10 +20,18 @@ jobs:
           reaction-type: "eyes"
           allow-edits: "false"
           permission-level: admin
-      - name: Validate /deploy command
-        if: ${{ !steps.command.outputs.command-arguments }}
-        run: exit 0
+      - id: command
+        name: Validate /deploy command
+        run: |
+          run: echo "::set-output name=arguments::${{ steps.command.outputs.command-arguments }}"
+
+  deploy:
+    if: needs.command.outputs.arguments
+    runs-on: ubuntu-latest
+    needs: command
+    steps:
+      - uses: actions/checkout@v2
       - name: Build
         run: echo $MARKET_CODES
         env:
-          MARKET_CODES: "${{ steps.command.outputs.command-arguments }}"
+          MARKET_CODES: ${{ needs.command.outputs.arguments }}
