--- a/.github/workflows/deploy-command.yml
+++ b/.github/workflows/deploy-command.yml
@@ -26,12 +26,14 @@ jobs:
           echo "::set-output name=arguments::${{ steps.command.outputs.command-arguments }}"
 
   deploy:
-    if: needs.deploy-command.outputs.arguments
+    # if: needs.deploy-command.outputs.arguments
     runs-on: ubuntu-latest
     needs: check-command
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: echo $MARKET_CODES
+        run: |
+          echo ${{ toJson(needs) }}
+          echo $MARKET_CODES
         env:
           MARKET_CODES: ${{ needs.deploy-command.outputs.arguments }}
