--- a/.github/workflows/deploy-command.yml
+++ b/.github/workflows/deploy-command.yml
@@ -16,9 +16,9 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           command: deploy
-          reaction: "true"
-          reaction-type: "eyes"
-          allow-edits: "false"
+          reaction: 'true'
+          reaction-type: 'eyes'
+          allow-edits: 'false'
           permission-level: admin
       - id: deploy-command
         name: Check /deploy command arguments
@@ -33,6 +33,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         run: |
-          echo hej
+          echo hej ${{ needs.check-command.outputs.arguments }}
         env:
-          MARKET_CODES: "${{ needs.check-command.outputs.arguments }}"
+          MARKET_CODES: '${{ needs.check-command.outputs.arguments }}'
